--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,58 +1,75 @@
 nav {
-  height: 10vh;
-  background: #333333;
+  top: 0;
+  z-index: 100;
+  position: fixed;
+  width: 100%;
+  background-image: url("../img/white.png");
+  background-color: #FFFFFF;
+  height: 100px;
 }
 
-.nav-links {
-  display: flex;
-  list-style: none;
-  width: 50%;
-  height: 100%;
-  justify-content: space-around;
-  align-items: center;
-  margin-left: auto;
+#navbar {
+  position: absolute;
+  cursor: pointer;
+  right: 5%;
+  top: 50%;
+  transform: translate(-5%, -50%);
 }
 
-.nav-links li a {
-  color: white;
+#nav-links li a {
+  color: #333333;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 20px;
+  margin: 20px;
 }
 
-@media screen and (max-width: 2000px) {
-  nav {
-    position: relative;
-    background: white;
-    height: 10vh;
-  }
+#nav-links {
+  display: none;
+  flex-direction: row;
 
-  .navbar {
-    position: absolute;
-    cursor: pointer;
-    right: 5%;
-    top: 50%;
-    transform: translate(-5%, -50%);
-  }
 
-  .nav-links li a {
-    color: #333333;
-    text-decoration: none;
-    font-size: 40px;
-  }
+  position: absolute;
+  cursor: pointer;
+  left: 5%;
+  top: 50%;
+  transform: translate(-5%, -50%);
 
-  .nav-links {
-    position: relative;
-    background: white;
-    height: 100vh;
-    width: 100%;
-    flex-direction: column;
-    display: none;
-  }
+  margin-left: 20px;
+  list-style: none;
+}
 
-  .line {
-    width: 30px;
-    height: 2px;
-    background: black;
-    margin: 5px;
-  }
+#link0:hover, #link1:hover, #link2:hover, #link3:hover, #link4:hover {
+  text-decoration: underline;
+}
+
+
+.line {
+  width: 30px;
+  height: 2px;
+  background: #333333;
+  margin: 5px;
+}
+
+.show {
+  transition: 0.5s;
+  display: flex !important;
+}
+
+#bar1.open {
+  transition: 0.3s;
+
+  transform: translate(0px, 6px) rotate(45deg);
+}
+
+#bar2.open {
+  transition: 0.3s;
+  transform: rotate(-45deg);
+}
+
+#bar3.open {
+  display: none;
+  animation: 2s;
+  -moz-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
